[package]
name = "lokichain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["test-util", "macros"] }
tokio-macros = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bech32 = "0.11"
base64 = "0.22"
rand = "0.8"
chrono = "0.4.39"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
